2008-04-09  Chong Yidong  <cyd@stupidchicken.com>

	* emacs-lisp/regexp-opt.el (regexp-opt-group): Use
	substring-no-properties for correct handling of unibyte strings.

2008-04-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* add-log.el (change-log-next-buffer): Handle the case where version<
	signals an error.

	* mouse.el (mouse-menu-major-mode-map): New fun extracted from
	mouse-major-mode-menu.
	(mouse-menu-bar-map): New fun extracted from mouse-popup-menubar.
	(mouse-major-mode-menu, mouse-popup-menubar)
	(mouse-popup-menubar-stuff): Use them.
	(C-down-mouse-3): Bind to a dynamic map rather than to
	mouse-popup-menubar-stuff.

	* bindings.el (mode-line-major-mode-keymap): Bind down-mouse-1
	to mouse-menu-major-mode-map rather than to mouse-major-mode-menu.

2008-04-09  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-svn.el (vc-svn-modify-change-comment): Add support for the
	file:// access method.

2008-04-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el: New file.
	* loadup.el: Load it.

2008-04-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in ($(lisp)/mh-e/mh-loaddefs.el): Make it depend on mh-e/*.el
	rather than subdirs.el.  It introduces an ugly circular dependency, tho.

	* calc/calc.el: Load "cal-loaddefs" rather than set up manual autoloads.
	(calc-mode-map, calc-digit-map, calc-dispatch-map):
	Move initialization into declaration.
	* calc/calc-yank.el:
	* calc/calc-misc.el:
	* calc/calc-embed.el:
	* calc/calc-aent.el: Add autoload cookies.  Set generated-autoload-file.

2008-04-08  Michael Albinus  <michael.albinus@gmx.de>

	* ps-samp.el (ps-add-printer, ps-remove-printer)
	(ps-make-dynamic-printer-menu): New functions.

	* net/zeroconf.el: New file.

2008-04-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* calendar/cal-hebrew.el (calendar-hebrew-list-yahrzeits): Typo.

2008-04-08  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-rcs.el (vc-rcs-modify-change-comment):